syntax = "proto3";

package v1.worker;

option go_package = "github.com/accuknox/knoxAutoPolicy/protos/v1/worker";

service Worker {
    rpc GetWorkerStatus (WorkerRequest) returns (WorkerResponse);
    rpc Start (WorkerRequest) returns (WorkerResponse);
    rpc Stop (WorkerRequest) returns (WorkerResponse);
    rpc Convert (WorkerRequest) returns (WorkerResponse);
}

message WorkerRequest {
    string policytype = 1;
    string req = 2;
    string logfile = 3;
    string namespace = 4;
    string clustername = 5;
    string labels = 6;
    string fromsource = 7;
}

message WorkerResponse {
    string res = 1;
    repeated KubeArmorPolicy kubearmorpolicy = 2;
    repeated CiliumPolicy ciliumpolicy = 3;
}

message KubeArmorPolicy {
    bytes Data = 1;
}

message CiliumPolicy {
    bytes Data = 1;
}
